Revision history for {{$dist->name}}

{{$NEXT}}

0.002     2014-01-12 08:05:15Z
          - the checksum is updated (and therefore the callback is invoked)
            for every change to the content, not just (potentially) the first
            (thanks, Yanick!)

0.001     2013-10-21 01:49:13Z (Karen Etheridge)
          - Initial release.